[lesson2] Added exercise d.

--- a/basic_lessons/lesson2_exercise_answers.ipynb
+++ b/basic_lessons/lesson2_exercise_answers.ipynb
@@ -44,14 +44,19 @@
    "source": "# Valid imports"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-29T22:31:23.725947Z",
+     "start_time": "2026-01-29T22:31:23.709145Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from math import pi, sin, cos\n",
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -63,7 +68,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-29T22:31:23.749857Z",
+     "start_time": "2026-01-29T22:31:23.733624Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_a = pi/4.0\n",
@@ -74,8 +84,17 @@
     "# Printing the result is NOT a mandatory part of the answer.\n",
     "print(f'R_a = {R_a}')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_a = [[ 0.70710678 -0.70710678]\n",
+      " [ 0.70710678  0.70710678]]\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -83,7 +102,12 @@
    "source": "## Exercise b"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-29T22:31:23.765717Z",
+     "start_time": "2026-01-29T22:31:23.750326Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "θ_b1 = pi/12.0\n",
@@ -99,8 +123,17 @@
     "\n",
     "print(f'R_b = {R_b}')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_b = [[ 0.25881905  0.96592583]\n",
+      " [-0.96592583  0.25881905]]\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -108,12 +141,17 @@
    "source": "## Exercise c"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-29T22:31:23.779702Z",
+     "start_time": "2026-01-29T22:31:23.766189Z"
+    }
+   },
    "cell_type": "code",
    "source": [
-    "θ_c = pi/3.0 # As given in the exercise\n",
-    "x_c = 2.0 # As given in the exercise\n",
-    "y_c = 5.0 # As given in the exercise\n",
+    "θ_c = pi/3.0\n",
+    "x_c = 2.0\n",
+    "y_c = 5.0\n",
     "\n",
     "H_c1 = np.array([[cos(θ_c),-sin(θ_c), 0],\n",
     "                 [sin(θ_c), cos(θ_c), 0],\n",
@@ -127,8 +165,68 @@
     "\n",
     "print(f'H_c = {H_c}')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H_c = [[ 0.5        -0.8660254  -3.33012702]\n",
+      " [ 0.8660254   0.5         4.23205081]\n",
+      " [ 0.          0.          1.        ]]\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Exercise d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-29T22:31:23.798367Z",
+     "start_time": "2026-01-29T22:31:23.780110Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "θ_d = pi/3.0\n",
+    "x_d = 2.0\n",
+    "y_d = 5.0\n",
+    "\n",
+    "\n",
+    "H_d1 = np.array([[1,0,x_d],\n",
+    "                 [0,1,y_d],\n",
+    "                 [0,0,1]])\n",
+    "\n",
+    "H_d2 = np.array([[cos(θ_d),-sin(θ_d), 0],\n",
+    "                 [sin(θ_d), cos(θ_d), 0],\n",
+    "                 [0,        0,        1]])\n",
+    "\n",
+    "\n",
+    "H_d = H_d1 @ H_d2\n",
+    "\n",
+    "print(f'H_d = {H_d}')"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H_d = [[ 0.5       -0.8660254  2.       ]\n",
+      " [ 0.8660254  0.5        5.       ]\n",
+      " [ 0.         0.         1.       ]]\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "`H_c` is *not* the same as `H_d`. This indicates that the order of operations matter. That is, sequential pose transformations are not commutative."
   }
  ],
  "metadata": {
