--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -253,16 +253,27 @@
    "source": [
     "# 2D poses (combined translation/orientation)\n",
     "\n",
-    "2D poses can be represented using elements of SE(2). Translations and rotations can be combined into a single $\\mymatrix{H}\\in\\mathbb{R}^{3 \\times 3}$ with the following structure\n",
+    "2D poses can be represented using elements of SE(2). A translation followed by a rotation can be combined into a single $\\mymatrix{H}\\in\\mathbb{R}^{3 \\times 3}$ with the following structure\n",
     "\n",
-    "$$\\mymatrix{H}(x,y,\\theta) = \\left[\\begin{array}{ccc}\n",
+    "$$\\mymatrix{H}(x,y,\\theta) =\n",
+    "\\left[\\begin{array}{ccc}\n",
+    "             1 & 0 & x \\\\\n",
+    "             0 & 1 & y \\\\\n",
+    "             0 & 0 & 1\n",
+    "        \\end{array}\\right]\n",
+    "\\left[\\begin{array}{ccc}\n",
+    "             \\cos{\\theta} & -\\sin{\\theta} & 0 \\\\\n",
+    "             \\sin{\\theta} & \\cos{\\theta}  & 0 \\\\\n",
+    "             0            & 0             & 1\n",
+    "        \\end{array}\\right] =\n",
+    "\\left[\\begin{array}{ccc}\n",
     "             \\cos{\\theta} & -\\sin{\\theta} & x \\\\\n",
     "             \\sin{\\theta} & \\cos{\\theta}  & y \\\\\n",
     "             0            & 0             & 1\n",
     "        \\end{array}\\right].$$\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "The pose written as a homogenous matrix shown above represents a translation followed by a rotation. To see the difference, check the exercises at the end of this lesson.\n",
+    "The translation and rotation order is extremelly important. Check the exercises at the end of this lesson.\n",
     "</div>\n",
     "\n",
     "For $\\theta = \\frac{\\pi}{2}$, $x = 0.1$, and $y = 0.2$, we have the following equivalent piece of code."
@@ -363,7 +374,7 @@
    "source": [
     "## Compositions of rotations in SO(3)\n",
     "\n",
-    "Compositions in SO(3) follow the same rules as SO(2), where sequential frame transformations are represented by right multiplications. For instance,\n",
+    "Compositions in SO(3) follow the same rules as SO(2), where sequential rotations are represented by right multiplications. For instance,\n",
     "\n",
     "$$\\mymatrix{R}_c = \\mymatrix{R}_a\\mymatrix{R}^a_b\\mymatrix{R}^b_c.$$\n",
     "\n",
@@ -428,12 +439,25 @@
    "source": [
     "# 3D poses\n",
     "\n",
-    "3D poses are represented in SE(3) with matrices $\\mymatrix{H}\\in\\mathbb{R}^{4 \\times 4}$ with the following structure\n",
+    "A translation followed by a rotation in 3D is represented in SE(3) with matrices $\\mymatrix{H}\\in\\mathbb{R}^{4 \\times 4}$ with the following structure\n",
     "\n",
-    "$$\\mymatrix{H}(\\myvec{t},\\mymatrix{R}) = \\left[\\begin{array}{ccc}\n",
+    "$$\\mymatrix{H}(\\myvec{t},\\mymatrix{R}) =\n",
+    "\\left[\\begin{array}{ccc}\n",
+    "             \\mymatrix{I} & \\myvec{t} \\\\\n",
+    "             \\myvec{0} & 1\n",
+    "        \\end{array}\\right]\n",
+    "\\left[\\begin{array}{ccc}\n",
+    "             \\mymatrix{R} & \\myvec{0} \\\\\n",
+    "             \\myvec{0} & 1\n",
+    "        \\end{array}\\right] =\n",
+    "\\left[\\begin{array}{ccc}\n",
     "             \\mymatrix{R} & \\myvec{t} \\\\\n",
     "             \\myvec{0} & 1 \n",
-    "        \\end{array}\\right].$$"
+    "        \\end{array}\\right].$$\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "The translation and rotation order is extremelly important.\n",
+    "</div>"
    ]
   },
   {
@@ -614,6 +638,30 @@
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Exercise d\n",
+    "\n",
+    "Consider the same variables as in `Exercise c` by replacing the subscripts with `d`. Calculate, instead, the rotation followed by the translation. Store the result in the variable `H_d` shown in the cell below.\n",
+    "\n",
+    "Is `H_c` the same as `H_d`? What does that indicate?"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "θ_d = pi/3.0 # As given in the exercise\n",
+    "x_d = 2.0 # As given in the exercise\n",
+    "y_d = 5.0 # As given in the exercise\n",
+    "\n",
+    "H_d = None # Replace None with your solution to this exercise."
+   ]
   }
  ],
  "metadata": {
