[lesson2/3] Adjusting the FKM.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -623,7 +623,7 @@
     "\n",
     "Calculate the homogenous transformation representing the rotation $R(\\theta_c)$ followed by the translation $\\myvec{p}_c$.\n",
     "\n",
-    "Consider $\\theta_c = \\pi/3$, $x_c = 2$, $y_c = 5$, and store the result in the variable `H_c` shown in the cell below.\n"
+    "Consider $\\theta_c = \\frac{\\pi}{3}$, $x_c = 2$, $y_c = 5$, and store the result in the variable `H_c` shown in the cell below.\n"
    ]
   },
   {
