[lesson3] Adding information about the DH parameters.

--- a/basic_lessons/lesson3_tutorial.ipynb
+++ b/basic_lessons/lesson3_tutorial.ipynb
@@ -43,19 +43,14 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-30T09:37:30.374251Z",
-     "start_time": "2026-01-30T09:37:29.561384Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "%%capture\n",
     "%pip install numpy\n",
     "%pip install numpy --break-system-packages"
    ],
    "outputs": [],
-   "execution_count": 24
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -69,18 +64,14 @@
    "metadata": {
     "tags": [
      "imports"
-    ],
-    "ExecuteTime": {
-     "end_time": "2026-01-30T09:37:30.379800Z",
-     "start_time": "2026-01-30T09:37:30.374858Z"
-    }
+    ]
    },
    "source": [
     "import numpy as np\n",
     "from math import pi, sin, cos"
    ],
    "outputs": [],
-   "execution_count": 25
+   "execution_count": null
   },
   {
    "attachments": {
@@ -140,11 +131,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "tags": [],
-    "ExecuteTime": {
-     "end_time": "2026-01-30T09:37:30.389515Z",
-     "start_time": "2026-01-30T09:37:30.380270Z"
-    }
+    "tags": []
    },
    "source": [
     "H_0_0p = np.array(\n",
@@ -155,21 +142,8 @@
     "\n",
     "print(f\"The first transformation is\\n\\n H_0_0p = \\n{H_0_0p}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The first transformation is\n",
-      "\n",
-      " H_0_0p = \n",
-      "[[ 0.70710678 -0.70710678  0.        ]\n",
-      " [ 0.70710678  0.70710678  0.        ]\n",
-      " [ 0.          0.          1.        ]]\n"
-     ]
-    }
-   ],
-   "execution_count": 26
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -190,12 +164,7 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-30T09:37:30.399657Z",
-     "start_time": "2026-01-30T09:37:30.390667Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "H_0p_1 = np.array(\n",
     "        [[1, 0, 0.3],\n",
@@ -205,21 +174,8 @@
     "\n",
     "print(f\"The second transformation is\\n\\n H_0p_1 = \\n{H_0p_1}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The second transformation is\n",
-      "\n",
-      " H_0p_1 = \n",
-      "[[1.  0.  0.3]\n",
-      " [0.  1.  0. ]\n",
-      " [0.  0.  1. ]]\n"
-     ]
-    }
-   ],
-   "execution_count": 27
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -237,12 +193,7 @@
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-30T09:37:30.409234Z",
-     "start_time": "2026-01-30T09:37:30.400796Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "H_1_1p = np.array(\n",
@@ -253,21 +204,8 @@
     "\n",
     "print(f\"The third transformation is\\n\\n H_1_1p = \\n{H_1_1p}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The third transformation is\n",
-      "\n",
-      " H_1_1p = \n",
-      "[[ 0.97492791  0.22252093  0.        ]\n",
-      " [-0.22252093  0.97492791  0.        ]\n",
-      " [ 0.          0.          1.        ]]\n"
-     ]
-    }
-   ],
-   "execution_count": 28
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -288,12 +226,7 @@
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-30T09:37:30.419320Z",
-     "start_time": "2026-01-30T09:37:30.409875Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "H_1p_2 = np.array(\n",
     "        [[1, 0, 0.95],\n",
@@ -303,21 +236,8 @@
     "\n",
     "print(f\"The second transformation is\\n\\n H_1p_2 = \\n{H_1p_2}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The second transformation is\n",
-      "\n",
-      " H_1p_2 = \n",
-      "[[1.   0.   0.95]\n",
-      " [0.   1.   0.  ]\n",
-      " [0.   0.   1.  ]]\n"
-     ]
-    }
-   ],
-   "execution_count": 29
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -335,42 +255,140 @@
    ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-30T09:37:30.438035Z",
-     "start_time": "2026-01-30T09:37:30.419963Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "H_0_2 = H_0_0p @ H_0p_1 @ H_1_1p @ H_1p_2\n",
     "\n",
-    "print(f\"The FKM for this robot at the specified configuration is\\n\\n H_0_2 = \\n{H_0_2}\")"
+    "print(f\"The FKM for the RR robot at the specified configuration is\\n\\n H_0_2 = \\n{H_0_2}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The FKM for this robot at the specified configuration is\n",
-      "\n",
-      " H_0_2 = \n",
-      "[[ 0.8467242  -0.53203208  1.01652002]\n",
-      " [ 0.53203208  0.8467242   0.71756251]\n",
-      " [ 0.          0.          1.        ]]\n"
-     ]
-    }
-   ],
-   "execution_count": 30
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Suggested exercises\n",
-    "1. What about an RRR robot?\n",
-    "2. What about if the robot had `n` degrees-of-freedom?\n",
-    "3. What if the robot is RP, that is, has a prismatic joint?"
+    "# Denavit-Hartenberg (DH) Parameters\n",
+    "\n",
+    "Despite being the most mistyped concept in my career, DH parameters are ubiquitous and frequently used to describe commercial robots.\n",
+    "\n",
+    "The process can be divided into two major parts, with different levels of difficulty.\n",
+    "1. Obtaining the DH parameters for a given robot.\n",
+    "2. Using given DH parameters to obtain the robot's FKM.\n",
+    "\n",
+    "Obtaining the DH parameters of a robot usually requires some thought, in particular if the robot has many degrees-of-freedom. This is not the objective of this lesson, because that does not involve programming. It is a pen-and-paper exercise.\n",
+    "\n",
+    "After the DH parameters are obtained, calculating the FKM of the robot is trivial.\n",
+    "\n",
+    "## DH parameter table for an RR robot\n",
+    "\n",
+    "Let us start with a sample table, shown below.\n",
+    "\n",
+    "| Joint | $\\theta$ | $d$     | $a$ | $\\alpha$ |\n",
+    "|-------|----------|---------|-----|----------|\n",
+    "| 0     | $q_0(t)$ | $l_{0}$ | 0   | 0        |\n",
+    "| 1     | $q_1(t)$ | $l_{1}$ | 0   | 0        |\n",
+    "\n",
+    "Each joint transformation is represented by a row. The transformations of each row will be done in the following sequence.\n",
+    "\n",
+    "1. A rotation about the $z$-axis.\n",
+    "2. A translation about the $z$-axis.\n",
+    "3. A translation about the $x$-axis.\n",
+    "4. A rotation about the $x$-axis.\n",
+    "\n",
+    "Note that the sequence of transformations in the table represent the same FKM of our RR robot derived previously. The only difference is that the result will be an element of SE(3).\n",
+    "\n",
+    "## DH parameter table for a PP robot\n",
+    "\n",
+    "Instead of working again on the RR robot, let's derive the FKM for a PP robot, composed of two prismatic joints. Let its configuration be composed of $q_{B0}(t)$ and $q_{B1}(t)$, with different subscripts to differentiate from the RR robot.\n",
+    "\n",
+    "Consider that the FKM is represented by the table below.\n",
+    "\n",
+    "| Joint | $\\theta$ | $d$         | $a$ | $\\alpha$        |\n",
+    "|-------|----------|-------------|-----|-----------------|\n",
+    "| 0     | 0        | $q_{B0}(t)$ | 0   | $\\frac{\\pi}{2}$ |\n",
+    "| 1     | 0        | $q_{B1}(t)$ | 0   | 0               |\n",
+    "\n",
+    "Given that we can ignore any cells with zeros, this robot will be composed of three transformations.\n",
+    "1. A translation of $q_{B0}(t)$ along the $z$-axis, from $\\mathcal{F}_{B0}$ to $\\mathcal{F}_{B0'}$.\n",
+    "2. A rotation of $\\frac{\\pi}{2}$ about the $x$-axis, from $\\mathcal{F}_{B0'}$ to $\\mathcal{F}_{B1}$.\n",
+    "3. A translation of $q_{B1}(t)$ along the $z$-axis, from $\\mathcal{F}_{B1}$ to $\\mathcal{F}_{B2}$.\n",
+    "\n",
+    "Using elements of SE(3), we obtain the FKM of this robot as follows.\n",
+    "\n",
+    "$$\n",
+    "\\mymatrix{H}^{B0}_{B2}(q_{B0},q_{B1})=\n",
+    "\\left[\\begin{array}{ccc}\n",
+    "        1  & 0 & 0 & 0 \\\\\n",
+    "        0  & 1 & 0 & 0 \\\\\n",
+    "        0  & 0 & 1 & q_{B0}(t) \\\\\n",
+    "        0  & 0 & 0 & 1\n",
+    "\\end{array}\\right]\n",
+    "\\left[\\begin{array}{ccc}\n",
+    "        1   & 0 & 0 & 0\\\\\n",
+    "        0   &  \\cos{\\frac{\\pi}{2}}  & -\\sin{\\frac{\\pi}{2}} & 0\\\\\n",
+    "        0  & \\sin{\\frac{\\pi}{2}}  & \\cos{\\frac{\\pi}{2}} & 0\\\\\n",
+    "        0  & 0             & 0            & 1\n",
+    "\\end{array}\\right]\n",
+    "\\left[\\begin{array}{ccc}\n",
+    "        1  & 0 & 0 & 0 \\\\\n",
+    "        0  & 1 & 0 & 0 \\\\\n",
+    "        0  & 0 & 1 & q_{B1}(t) \\\\\n",
+    "        0  & 0 & 0 & 1\n",
+    "\\end{array}\\right]\n",
+    ".$$\n",
+    "\n",
+    "Programmatically, suppose $q_{B0}=0.2$ and $q_{B1}=0.3$. We obtain the following piece of code."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "q_B0 = 0.2\n",
+    "q_B1 = 0.3\n",
+    "theta_B0 = pi/2.0\n",
+    "\n",
+    "H_B0_B0p = np.array(\n",
+    "          [[1, 0, 0, 0],\n",
+    "           [0, 1, 0, 0],\n",
+    "           [0, 0, 1, q_B0],\n",
+    "           [0, 0, 0, 1]]\n",
+    ")\n",
+    "\n",
+    "H_B0p_B1 = np.array(\n",
+    "          [[1, 0, 0, 0],\n",
+    "           [0, cos(theta_B0), -sin(theta_B0), 0],\n",
+    "           [0, sin(theta_B0),  cos(theta_B0), 0],\n",
+    "           [0, 0, 0, 1]]\n",
+    ")\n",
+    "\n",
+    "H_B1_B2 = np.array(\n",
+    "          [[1, 0, 0, 0],\n",
+    "           [0, 1, 0, 0],\n",
+    "           [0, 0, 1, q_B1],\n",
+    "           [0, 0, 0, 1]]\n",
+    ")\n",
+    "\n",
+    "# FKM\n",
+    "H_B0_B2 = H_B0_B0p @ H_B0p_B1 @ H_B1_B2\n",
+    "\n",
+    "print(f\"The FKM for the PP robot at the specified configuration is\\n\\n H_B0_B2 = \\n{H_B0_B2}\")"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Exercises\n",
+    "1. What if the robot is RP, that is, has a prismatic joint?\n",
+    "2. What about an RRR robot?\n",
+    "\n",
+    "# Extra challenge(s)\n",
+    "1. What about if the robot had `n` degrees-of-freedom?\n"
    ]
   }
  ],
