[lesson3] Adjusting sections for the PP robot.

--- a/basic_lessons/lesson3_tutorial.ipynb
+++ b/basic_lessons/lesson3_tutorial.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "The only real challenge in obtaining the FKM is understanding from a diagram, or a real robot, what transformations represent the robot and in what order they happen.\n",
     "\n",
-    "Anyway, we can start with an example.\n",
+    "Anyway, we can start with an example. As always, remember that angles are in radians and lengths are in meters.\n",
     "\n",
     "![Lesson4.png](Lesson4.png)\n",
     "\n",
@@ -243,7 +243,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Ok, so where's the FKM?\n",
+    "## Ok, so where's the FKM for the RR robot?\n",
     "\n",
     "As we summarised earlier, the planar RR robot used in this lesson is composed of four sequential transformations. We obtained each of them individually, therefore the final step for the FKM is to compose them in sequence.\n",
     "\n",
@@ -292,18 +292,18 @@
     "\n",
     "Each joint transformation is represented by a row. The transformations of each row will be done in the following sequence.\n",
     "\n",
-    "1. A rotation about the $z$-axis.\n",
-    "2. A translation about the $z$-axis.\n",
-    "3. A translation about the $x$-axis.\n",
-    "4. A rotation about the $x$-axis.\n",
+    "1. A rotation about the $z$-axis, related to column $\\theta$.\n",
+    "2. A translation about the $z$-axis, related to column $d$.\n",
+    "3. A translation about the $x$-axis, related to column $a$.\n",
+    "4. A rotation about the $x$-axis, related to column $\\alpha$.\n",
     "\n",
     "Note that the sequence of transformations in the table represent the same FKM of our RR robot derived previously. The only difference is that the result will be an element of SE(3).\n",
     "\n",
     "## DH parameter table for a PP robot\n",
     "\n",
-    "Instead of working again on the RR robot, let's derive the FKM for a PP robot, composed of two prismatic joints. Let its configuration be composed of $q_{B0}(t)$ and $q_{B1}(t)$, with different subscripts to differentiate from the RR robot.\n",
+    "Instead of working again on the RR robot, let's derive the FKM for a PP robot, composed of two prismatic joints. Let its configuration be composed of $q_{B0}(t)$ and $q_{B1}(t)$, with different subscripts to clarify that it is a different robot.\n",
     "\n",
-    "Consider that the FKM is represented by the table below.\n",
+    "Consider that the FKM is represented by the table below. Note that another benefit of a table is that there's no need to interpret a robot diagram.\n",
     "\n",
     "| Joint | $\\theta$ | $d$         | $a$ | $\\alpha$        |\n",
     "|-------|----------|-------------|-----|-----------------|\n",
@@ -314,6 +314,8 @@
     "1. A translation of $q_{B0}(t)$ along the $z$-axis, from $\\mathcal{F}_{B0}$ to $\\mathcal{F}_{B0'}$.\n",
     "2. A rotation of $\\frac{\\pi}{2}$ about the $x$-axis, from $\\mathcal{F}_{B0'}$ to $\\mathcal{F}_{B1}$.\n",
     "3. A translation of $q_{B1}(t)$ along the $z$-axis, from $\\mathcal{F}_{B1}$ to $\\mathcal{F}_{B2}$.\n",
+    "\n",
+    "## FKM for the PP robot\n",
     "\n",
     "Using elements of SE(3), we obtain the FKM of this robot as follows.\n",
     "\n",
