[lesson3] Increasing readability of the PP robot FKM.

--- a/basic_lessons/lesson3_tutorial.ipynb
+++ b/basic_lessons/lesson3_tutorial.ipynb
@@ -317,35 +317,44 @@
     "\n",
     "## FKM for the PP robot\n",
     "\n",
-    "Using elements of SE(3), we obtain the FKM of this robot as follows.\n",
+    "Using elements of SE(3), we obtain each of the three transformations, as follows.\n",
     "\n",
-    "$$\n",
-    "\\mymatrix{H}^{B0}_{B2}(q_{B0},q_{B1})=\n",
-    "\\left[\\begin{array}{ccc}\n",
+    "$$\\begin{align}\n",
+    "\\mymatrix{H}^{B0}_{B0'}(q_{B0})&=\\left[\\begin{array}{ccc}\n",
     "        1  & 0 & 0 & 0 \\\\\n",
     "        0  & 1 & 0 & 0 \\\\\n",
     "        0  & 0 & 1 & q_{B0}(t) \\\\\n",
     "        0  & 0 & 0 & 1\n",
-    "\\end{array}\\right]\n",
-    "\\left[\\begin{array}{ccc}\n",
+    "\\end{array}\\right], \\\\\n",
+    "\\mymatrix{H}^{B0'}_{B1}&=\\left[\\begin{array}{ccc}\n",
     "        1   & 0 & 0 & 0\\\\\n",
     "        0   &  \\cos{\\frac{\\pi}{2}}  & -\\sin{\\frac{\\pi}{2}} & 0\\\\\n",
     "        0  & \\sin{\\frac{\\pi}{2}}  & \\cos{\\frac{\\pi}{2}} & 0\\\\\n",
     "        0  & 0             & 0            & 1\n",
-    "\\end{array}\\right]\n",
-    "\\left[\\begin{array}{ccc}\n",
+    "\\end{array}\\right], \\\\\n",
+    "\\mymatrix{H}^{B1}_{B2}(q_{B1})&=\\left[\\begin{array}{ccc}\n",
     "        1  & 0 & 0 & 0 \\\\\n",
     "        0  & 1 & 0 & 0 \\\\\n",
     "        0  & 0 & 1 & q_{B1}(t) \\\\\n",
     "        0  & 0 & 0 & 1\n",
-    "\\end{array}\\right]\n",
-    ".$$\n",
+    "\\end{array}\\right].\n",
+    "\\end{align}$$\n",
+    "\n",
+    "Then, we sequentially compose them to obtain the FKM.\n",
+    "\n",
+    "$$\n",
+    "\\mymatrix{H}^{B0}_{B2}(q_{B0},q_{B1})=\\mymatrix{H}^{B0}_{B0'}(q_{B0})\\mymatrix{H}^{B0'}_{B1}\\mymatrix{H}^{B1}_{B2}(q_{B1}).$$\n",
     "\n",
     "Programmatically, suppose $q_{B0}=0.2$ and $q_{B1}=0.3$. We obtain the following piece of code."
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-30T13:59:40.261932Z",
+     "start_time": "2026-01-30T13:59:40.233239Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "q_B0 = 0.2\n",
@@ -378,8 +387,22 @@
     "\n",
     "print(f\"The FKM for the PP robot at the specified configuration is\\n\\n H_B0_B2 = \\n{H_B0_B2}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The FKM for the PP robot at the specified configuration is\n",
+      "\n",
+      " H_B0_B2 = \n",
+      "[[ 1.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00]\n",
+      " [ 0.000000e+00  6.123234e-17 -1.000000e+00 -3.000000e-01]\n",
+      " [ 0.000000e+00  1.000000e+00  6.123234e-17  2.000000e-01]\n",
+      " [ 0.000000e+00  0.000000e+00  0.000000e+00  1.000000e+00]]\n"
+     ]
+    }
+   ],
+   "execution_count": 47
   },
   {
    "metadata": {},
