[lesson3] Added two exercises.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -528,7 +528,7 @@
     "trusted": true
    },
    "source": [
-    "# Extract Rc from Hc\n",
+    "# Extract R from H\n",
     "Rc = Hc[0:3,0:3] # The 3x3 Rotation matrix\n",
     "tc = Hc[0:3,3].reshape((3,1)) # The 3x1 translation vector at the forth column. Reshape it into a column vector.\n",
     "\n",
