--- a/basic_lessons/lesson3_tutorial.ipynb
+++ b/basic_lessons/lesson3_tutorial.ipynb
@@ -409,8 +409,71 @@
    "cell_type": "markdown",
    "source": [
     "# Exercises\n",
-    "1. What if the robot is RP, that is, has a prismatic joint?\n",
-    "2. What about an RRR robot?\n",
+    "\n",
+    "Consider that the `numpy` and `math` modules are already imported as shown earlier in this lesson.\n",
+    "\n",
+    "## Exercise a\n",
+    "\n",
+    "Consider a robotic manipulator that has the following DH-parameter table.\n",
+    "\n",
+    "| Joint | $\\theta$    | $d$         | $a$ | $\\alpha$        |\n",
+    "|-------|-------------|-------------|-----|-----------------|\n",
+    "| 0     | $q_{A0}(t)$ | 0.5         | 0   | $\\frac{\\pi}{2}$ |\n",
+    "| 1     | 0           | $q_{A1}(t)$ | 0   | 0               |\n",
+    "\n",
+    "Compute its FKM in SE(3) and store in `H_A0_A2` the result of the FKM given $q_{A0}(t) = \\frac{\\pi}{4}$ and $q_{A1}(t) = -0.1$."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "q_A0 = pi/4.0 # As given in the exercise\n",
+    "q_A1 = -0.1 # As given in the exercise\n",
+    "\n",
+    "H_A0_A2 = None # Replace None with your solution to this exercise."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "## Exercise c\n",
+    "\n",
+    "Consider a robotic manipulator that has the following DH-parameter table.\n",
+    "\n",
+    "| Joint | $\\theta$    | $d$      | $a$ | $\\alpha$ |\n",
+    "|-------|-------------|----------|-----|----------|\n",
+    "| 0     | $q_{C0}(t)$ | $l_{C0}$ | 0   | 0        |\n",
+    "| 1     | $q_{C1}(t)$ | $l_{C1}$ | 0   | 0        |\n",
+    "| 2     | $q_{C2}(t)$ | $l_{C2}$ | 0   | 0        |\n",
+    "\n",
+    "Compute its FKM in SE(3) and store in `H_C0_C3` the result of the FKM given $q_{C0}(t)=q_{C1}(t)=q_{C2}(t) = \\frac{\\pi}{5}$ and $l_{C0} = l_{C1} = l_{C2} = 0.25$."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "q_C0 = pi/5.0 # As given in the exercise\n",
+    "q_C1 = pi/5.0 # As given in the exercise\n",
+    "q_C2 = pi/5.0 # As given in the exercise\n",
+    "l_C0 = 0.25 # As given in the exercise\n",
+    "l_C1 = 0.25 # As given in the exercise\n",
+    "l_C2 = 0.25 # As given in the exercise\n",
+    "\n",
+    "H_C0_C3 = None # Replace None with your solution to this exercise."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "# Extra challenge(s)\n",
     "1. What about if the robot had `n` degrees-of-freedom?\n"
