[lesson3] Added exercises and answers.

--- a/basic_lessons/lesson3_tutorial.ipynb
+++ b/basic_lessons/lesson3_tutorial.ipynb
@@ -459,16 +459,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "q_C0 = pi/5.0 # As given in the exercise\n",
-    "q_C1 = pi/5.0 # As given in the exercise\n",
-    "q_C2 = pi/5.0 # As given in the exercise\n",
-    "l_C0 = 0.25 # As given in the exercise\n",
-    "l_C1 = 0.25 # As given in the exercise\n",
-    "l_C2 = 0.25 # As given in the exercise\n",
-    "\n",
-    "H_C0_C3 = None # Replace None with your solution to this exercise."
-   ]
+   "source": "H_C0_C3 = None # Replace None with your solution to this exercise."
   },
   {
    "metadata": {},
@@ -476,7 +467,7 @@
    "source": [
     "\n",
     "# Extra challenge(s)\n",
-    "1. What about if the robot had `n` degrees-of-freedom?\n"
+    "1. What about if it was a planar revolute manipulator with `n` degrees-of-freedom?\n"
    ]
   }
  ],
