[lesson2] Multiple formatting adjustments.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -99,11 +99,11 @@
     "\n",
     "Positions/translations and orientations/rotations of objects are always defined with respect to a reference frame. Reference frames can be attached to rigid bodies or at fixed locations in space. Reference frames are usually defined in such way to make the mathematical derivations simpler.\n",
     "\n",
-    "The neutral reference frame has the following notation\n",
+    "In this tutorial, the World (or neutral) reference frame has the following notation\n",
     "\n",
     "$$\\mathcal{F}.$$\n",
     "\n",
-    "Unless otherwise stated, a given position/orientation/pose is given with respect to that frame. When other frames are needed we usually rely on notations such as $$\\mathcal{F}',\\mathcal{F}''$$ when frames are sequential or $$\\mathcal{F}_a,\\mathcal{F}_b$$ when relationships are more complex.\n",
+    "**Unless otherwise stated, a given position/orientation/pose is given with respect to the World frame**. When other frames are needed we usually rely on notations such as $$\\mathcal{F}',\\mathcal{F}''$$ when frames are sequential or $$\\mathcal{F}_a,\\mathcal{F}_b$$ when relationships are more complex.\n",
     "\n",
     "# 2D Position/translation\n",
     "\n",
@@ -215,9 +215,9 @@
     "\n",
     "Orientations/rotations in 2D can be defined in many different ways. In this tutorial, we will address the special orthogonal group for two dimensions, i.e., SO(2). These rotations are defined, in this representation, as a matrix\n",
     "\n",
-    "$$\\mymatrix{R} \\in \\mathbb{R}^{2 \\times 2},$$\n",
+    "$$\\mymatrix{R} \\in \\mathbb{R}^{2 \\times 2}.$$\n",
     "\n",
-    "where the identity rotation means no rotation, hence, for any frame $\\mathcal{F}_a$,\n",
+    "The identity rotation means no rotation. For any frame $\\mathcal{F}_a$,\n",
     "\n",
     "$$\\mymatrix{R}^{a}_{a} = \\mymatrix{I}_2.$$\n",
     "\n",
@@ -228,7 +228,7 @@
     "             \\sin{\\theta} & \\cos{\\theta} \n",
     "        \\end{array}\\right],$$\n",
     "\n",
-    "when $\\theta = \\frac{\\pi}{2}$ we have the following equivalent piece of code."
+    "when $\\theta = \\frac{\\pi}{2}$, we have the following equivalent piece of code."
    ]
   },
   {
@@ -439,7 +439,7 @@
    "source": [
     "# 3D poses\n",
     "\n",
-    "A translation followed by a rotation in 3D is represented in SE(3) with matrices $\\mymatrix{H}\\in\\mathbb{R}^{4 \\times 4}$ with the following structure\n",
+    "In 3D, a translation followed by a rotation in the _current_ frame is represented with elements in SE(3). These elements are matrices $\\mymatrix{H}\\in\\mathbb{R}^{4 \\times 4}$ with the following structure\n",
     "\n",
     "$$\\mymatrix{H}(\\myvec{t},\\mymatrix{R}) =\n",
     "\\left[\\begin{array}{ccc}\n",
@@ -466,7 +466,35 @@
    "source": [
     "## Sequential pose transformations\n",
     "\n",
-    "We can also perform pose transformations using sequential right multiplications. Note also that we can verify the lack of commutativity on these transformations."
+    "We can also perform pose transformations using sequential right multiplications when they are with respect to the _current_ frame. Note also that we can verify the lack of commutativity on these transformations.\n",
+    "\n",
+    "For example, consider the following translation in 3D represented by a homogenous transformation matrix.\n",
+    "\n",
+    "$$\\mymatrix{H}^0_a = \\mymatrix{H}_a = \\left[\\begin{array}{ccc}\n",
+    "                                         1 & 0 & 0 & 1 \\\\\n",
+    "                                         0 & 1 & 0 & 2 \\\\\n",
+    "                                         0 & 0 & 1 & 3 \\\\\n",
+    "                                         0 & 0 & 0 & 1\n",
+    "                                       \\end{array}\\right],$$\n",
+    "\n",
+    "\n",
+    "$$\\mymatrix{H}^a_b = \\left[\\begin{array}{ccc}\n",
+    "                     \\cos{\\theta_{ab}} & -\\sin{\\theta_{ab}} & 0 & 0 \\\\\n",
+    "                     \\sin{\\theta_{ab}} & \\cos{\\theta_{ab}}  & 0 & 0 \\\\\n",
+    "                     0                 & 0                  & 1 & 0 \\\\\n",
+    "                     0                 & 0                  & 0 & 1\n",
+    "        \\end{array}\\right].$$\n",
+    "\n",
+    "We can compute\n",
+    "\n",
+    "\n",
+    "$$\\mymatrix{H}^0_b = \\mymatrix{H}_b = \\mymatrix{H}_a\\mymatrix{H}^a_b$$\n",
+    "\n",
+    "with $\\theta_{ab} = \\frac{\\pi}{4}$ as shown below. We also show that\n",
+    "\n",
+    "$$\\mymatrix{H}_a\\mymatrix{H}^a_b \\neq \\mymatrix{H}^a_b\\mymatrix{H}_a$$\n",
+    "\n",
+    "further reinforcing the importance of the order of operations."
    ]
   },
   {
@@ -479,26 +507,25 @@
     "x = 1\n",
     "y = 2\n",
     "z = 3\n",
-    "θza = pi/4\n",
-    "Ha =  np.array([[cos(θza),-sin(θza), 0, 1],\n",
-    "                [sin(θza), cos(θza), 0, 2],\n",
-    "                [0,        0,        1, 3],\n",
-    "                [0,        0,        0, 1]])\n",
+    "H0_a =  np.array([[1, 0, 0, 1],\n",
+    "                  [0, 1, 0, 2],\n",
+    "                  [0, 0, 1, 3],\n",
+    "                  [0, 0, 0, 1]])\n",
     "\n",
     "# An SE(3) rotation\n",
-    "θxb = pi/4\n",
-    "Hb = np.array([[1, 0,        0,       0],\n",
-    "               [0, cos(θxb), -sin(θxb), 0],\n",
-    "               [0, sin(θxb),  cos(θxb), 0],\n",
-    "               [0, 0,        0,       1]])\n",
+    "θab = pi/4\n",
+    "Ha_b = np.array([[cos(θab), -sin(θab), 0,  0],\n",
+    "                 [sin(θab),  cos(θab), 0,  0],\n",
+    "                 [0,         0,        1,  0],\n",
+    "                 [0,         0,        0,  1]])\n",
     "\n",
-    "# Ha then Hb\n",
-    "Hc = Ha @ Hb \n",
+    "# Ha then Ha_b\n",
+    "Hb = H0_a @ Ha_b\n",
     "\n",
-    "# Hb then Ha\n",
-    "Hc_ = Hb @ Ha \n",
+    "# Ha_b then Ha\n",
+    "H_wrong = Ha_b @ H0_a\n",
     "\n",
-    "if np.isclose(Hc,Hc_).all():\n",
+    "if np.isclose(Hb,H_wrong).all():\n",
     "    print('The results are close!')\n",
     "else:\n",
     "    print('The results are far, therefore the operation is not commutative')"
@@ -519,7 +546,7 @@
     "             \\myvec{0} & 1 \n",
     "        \\end{array}\\right],$$\n",
     "\n",
-    "so it is important to remember to _never_ invert the matrix with a regular matrix inversion algorithms. Using the matricial properties leads to a simpler, faster, and more accurate inversion. The only \"trick\" is to obtain the submatrix corresponding to the rotation matrix."
+    "so it is important to remember to _never_ invert the matrix with general matrix inversion algorithms. Using the matricial properties leads to a simpler, faster, and more accurate inversion. The only \"trick\" is to obtain the submatrix corresponding to the rotation matrix."
    ]
   },
   {
@@ -562,7 +589,7 @@
     "\n",
     "For $\\theta_a = \\frac{\\pi}{4}$, calculate\n",
     "\n",
-    "$$\\mymatrix{R}_{a} = R(\\theta_a) \\in SO(2)$$\n",
+    "$$\\mymatrix{R}^0_{a} = \\mymatrix{R}_{a} = R(\\theta_a) \\in SO(2)$$\n",
     "\n",
     "and store it in the variable `R_a` shown in the cell below."
    ]
@@ -584,7 +611,7 @@
    "source": [
     "## Exercise b\n",
     "\n",
-    "Calculate the result of a rotation of $\\theta_{b1} = \\frac{\\pi}{12}$ followed by a rotation of $\\theta_{b2} = -\\frac{\\pi}{2}$ using elements of SO(2).\n",
+    "Calculate the result of a rotation of $\\theta_{b1} = \\frac{\\pi}{12}$ followed by a rotation of $\\theta_{b2} = -\\frac{\\pi}{2}$, in the _current_ frame, using elements of SO(2).\n",
     "\n",
     "Store the result in the variable `R_b` shown in the cell below."
    ]
@@ -621,7 +648,7 @@
     "             \\sin{\\theta_c} & \\cos{\\theta_c}\n",
     "        \\end{array}\\right].$$\n",
     "\n",
-    "Calculate the homogenous transformation representing the rotation $R(\\theta_c)$ followed by the translation $\\myvec{p}_c$.\n",
+    "Starting at the World frame, calculate the homogenous transformation representing the rotation $R(\\theta_c)$, about the _World_ frame, followed by the translation $\\myvec{p}_c$, in the _current_ frame.\n",
     "\n",
     "Consider $\\theta_c = \\frac{\\pi}{3}$, $x_c = 2$, $y_c = 5$, and store the result in the variable `H_c` shown in the cell below.\n"
    ]
